force-app/main/default/objects/CoursePlan__c/CoursePlan__c.object-meta.xml
<CustomObject>
    <description>An instructor's plan for a course: the course definition plus declared availability, from which a schedule and Course record are generated on lock.</description>
    <label>Course Plan</label>
    <nameField>
        <displayFormat>CPL-{0000}</displayFormat>
        <label>Course Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>