force-app/main/default/objects/CoursePlan__c/fields/Class_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Class_Duration_Minutes__c</fullName>
    <label>Duration per Class (Minutes)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>