force-app/main/default/objects/CoursePlan__c/fields/Classes_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Classes_Per_Week__c</fullName>
    <label>Classes per Week</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>