force-app/main/default/objects/CoursePlan__c/fields/Classroom__c.field-meta.xml
<CustomField>
    <fullName>Classroom__c</fullName>
    <label>Classroom</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Classroom</valueSetName>
    </valueSet>
</CustomField>