force-app/main/default/objects/CoursePlan__c/fields/Generated_Course__c.field-meta.xml
<CustomField>
    <fullName>Generated_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Generated Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Course Plans</relationshipLabel>
    <relationshipName>CoursePlans</relationshipName>
    <type>Lookup</type>
</CustomField>