force-app/main/default/objects/CoursePlan__c/fields/Scheduling_Error__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Error__c</fullName>
    <label>Scheduling Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>