force-app/main/default/objects/CoursePlan__c/validationRules/Positive_Class_Counts.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Class_Counts</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Classes_Per_Week__c &lt; 1, Class_Duration_Minutes__c &lt; 1)</errorConditionFormula>
    <errorMessage>Classes per week and duration per class must both be at least 1.</errorMessage>
</ValidationRule>