force-app/main/default/objects/CoursePlan__c/listViews/All_Course_Plans.listView-meta.xml
<ListView>
    <fullName>All_Course_Plans</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Semester__c</columns>
    <columns>Classroom__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Course Plans</label>
    <sharedTo>
        <allInternalUsers />
        <allCustomerPortalUsers />
    </sharedTo>
</ListView>